# backup_sys

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
script/: gene.sh
src/: CMakeLists.txt  LZ77.cpp  LZ77.hpp  linux_copy.cpp  linux_copy.hpp  main.cpp
tests/: CMakeLists.txt  tests.cc
